# WePinkyPromised

./: LICENSE  README.md
MediaPlayer/: MediaPlayer.pro  main.cpp  player.cpp  player.h  player.ui
MultiMedia/: .gitignore  CMakeLists.txt  main.cpp  player.cpp  player.h
